# NEMO-tool-monitors

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  run_tests.py  test_nemo.db
NEMO_tool_monitors/: admin.py  alerts.py  api.py  apps.py  customizations.py  models.py  urls.py  views.py
NEMO_tool_monitors/migrations/: 0001_initial.py  0002_monitordata_notes.py  0003_monitor_column.py  0004_remove_monitor_category.py  0005_alter_monitor_description_help_text.py
NEMO_tool_monitors/static/NEMO_tool_monitors/: monitors.css
NEMO_tool_monitors/templates/NEMO_tool_monitors/: monitor_data.html  monitor_form.html  monitors.html  monitors_upload_hub.html  tool_monitors.html
NEMO_tool_monitors/templates/base/: navbar.html
NEMO_tool_monitors/templates/customizations/: customizations_tool_monitors.html
NEMO_tool_monitors/tests/: test_settings.py
scripts/: clean.sh  dev_reinstall.sh
