[project]
name = "NEMO-tool-monitors"
version = "0.1.0"
description = "Plugin for NEMO allowing privileged users to upload tool monitor data points and view them per tool."
keywords = ["NEMO", "tool monitors", "monitoring"]
readme = "README.md"
authors = [{name = "Alex Denton", email = "alexdenton998@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: Public Domain",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Framework :: Django :: 4.2",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "django",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/alexanderenrique/NEMO-tool-monitors"
Issues = "https://github.com/alexanderenrique/NEMO-tool-monitors/issues"

[project.optional-dependencies]
NEMO-CE = ["NEMO-CE>=7.3.0",]
NEMO = ["NEMO>=7.3.0",]
dev-tools = ["pre-commit", "djlint", "black"]

[tool.setuptools.packages.find]
include = ["NEMO_tool_monitors*"]

[tool.setuptools.package-data]
NEMO_tool_monitors = ["static/**/*", "templates/**/*"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.djlint]
profile = "django"
max_attribute_length=100
max_line_length=120
ignore = "H031"
